--- a/FinalProject/pom.xml
+++ b/FinalProject/pom.xml
@@ -46,6 +46,21 @@
 			<artifactId>jersey-core</artifactId>
 			<version>1.19.4</version>
 		</dependency>
+                <dependency>
+                    <groupId>com.google.maps</groupId>
+                    <artifactId>google-maps-services</artifactId>
+                    <version>0.9.3</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-simple</artifactId>
+                    <version>1.7.25</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.fasterxml.jackson.jaxrs</groupId>
+                    <artifactId>jackson-jaxrs-json-provider</artifactId>
+                    <version>2.9.0</version>
+                </dependency>
     </dependencies>
 
     <build>
