--- a/FinalProject/pom.xml
+++ b/FinalProject/pom.xml
@@ -34,11 +34,6 @@
             <version>8.0.16</version>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.module</groupId>
-            <artifactId>jackson-module-jaxb-annotations</artifactId>
-            <version>2.9.8</version>
-        </dependency>
-        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
@@ -94,7 +89,11 @@
             <artifactId>jackson-module-jaxb-annotations</artifactId>
             <version>2.9.8</version>
         </dependency>
-                
+        <dependency>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-base</artifactId>
+            <version>2.9.8</version>
+        </dependency>
     </dependencies>
 
     <build>
